--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.10"
+    ext {
+        kotlin_version = "1.5.10"
+        core_version = "1.5.0"
+        appcompat_version = "1.3.0"
+        coroutines_version = "1.5.0-native-mt"
+        lifecycle_version = "2.3.1"
+        material_version = "1.3.0"
+        constraint_layout_version = "2.0.4"
+
+        junit_version = "4.13.2"
+        espresso_version = "3.3.0"
+        android_junit_version = "1.1.2"
+    }
+
     repositories {
         google()
         mavenCentral()
